[gd_scene load_steps=28 format=2]

[ext_resource path="res://player_shader.tres" type="Material" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://png/player_sprite_sheet.png" type="Texture" id=4]
[ext_resource path="res://SkateParticles.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 448, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "slide_up",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 8 ), SubResource( 7 ) ],
"loop": true,
"name": "slide_down",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 13 ), SubResource( 12 ) ],
"loop": true,
"name": "slide_left",
"speed": 8.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 18 ) ],
"loop": true,
"name": "slide_right",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 31, 31 )

[sub_resource type="CapsuleShape2D" id=23]
radius = 14.5469
height = 21.1492

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.768627 )
material = ExtResource( 2 )
frames = SubResource( 21 )
animation = "slide_right"
frame = 5
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 22 )

[node name="HPBar" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="HPBar"]
margin_left = -1.0
margin_top = 64.0
margin_right = 65.0
margin_bottom = 74.0
color = Color( 0.607843, 0.341176, 0.45098, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HPBar"]
margin_top = 65.0
margin_right = 64.0
margin_bottom = 73.0
color = Color( 0.956863, 0.839216, 0.560784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageTimer" type="Timer" parent="."]

[node name="DamageTween" type="Tween" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 31.6713, 38.7156 )
shape = SubResource( 23 )

[node name="Particles" type="Node2D" parent="."]
position = Vector2( 32, 32 )

[node name="SkateParticles" parent="Particles" instance=ExtResource( 5 )]
position = Vector2( -0.374573, 29.9661 )

[node name="EntranceTween" type="Tween" parent="."]
[connection signal="timeout" from="DamageTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
